# qutemplates

./: LICENSE  README.md  pyproject.toml
docs/: handlers.md  opx-architecture.md  snapshot.md
src/qutemplates/: __init__.py
src/qutemplates/common/: __init__.py  control_panel.py  feature_context.py  live_animation_task.py  progress_task.py  wiring_helpers.py
src/qutemplates/common/tasks/: __init__.py  live_animation_task.py  progress_task.py
src/qutemplates/experiments/: __init__.py  template.py
src/qutemplates/export/: __init__.py  registry.py  save.py  utils.py
src/qutemplates/opx/: __init__.py  artefacts_registry.py  averager.py  base.py  constants.py  context.py  execution_strategy.py  experiment_interface.py  node_names.py  simulation.py  utils.py
src/qutemplates/opx/batch/: __init__.py  interface.py  solver.py  template.py
src/qutemplates/opx/handler/: __init__.py  base.py  caching_handler.py  default_handler.py  opx_context.py  simulation.py
src/qutemplates/opx/hardware/: __init__.py  averager.py  base_opx_handler.py  opx_context.py  opx_handler.py  simulation.py
src/qutemplates/opx/interactive/: __init__.py  template.py
src/qutemplates/opx/shared/: __init__.py  job_polling.py  live_animation.py  progress.py
src/qutemplates/opx/simulation/: __init__.py  execute.py  structure.py
src/qutemplates/opx/snapshot/: __init__.py  constants.py  data_acquisition.py  interface.py  solver.py  template.py
src/qutemplates/opx/strategies/: __init__.py  batch_builders.py  minimal.py  minimal_no_live.py  new_solver.py  solver.py  standard.py  (+2 more)
(+28 files in other folders)
