[project]
name = "qutemplates"
version = "0.3.0"
description = "Experiment templates for Quantum Machines OPX hardware"
readme = "README.md"
authors = [
    { name = "Uri Goldblatt", email = "uri.goldblatt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "qm-qua>=1.2.4a1",
    "tqdm",
    "quflow>=0.3.2",
    "PyQt6",
    "matplotlib",
    "pycaddy>=0.2.0"
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]


[tool.uv]
prerelease = "allow"

[tool.uv.sources]
quflow = { git = "https://github.com/HutoriHunzu/quflow.git" }

[tool.ruff]
# Set the maximum line length to 79.
line-length = 104


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
